
syntax = "proto3";

//for csharp
option csharp_namespace = "Inman.Platform.ServiceStub.Data";

message User{
	int32 Id = 1;
	string OpenId = 2;
	string UserName = 3;
}


message StockItem {
  int32 Id = 1;
  int32 SupplierID = 2;
  int32 ColorID = 3;
  int32 ItemCategoryId1 = 4;
  int32 ItemCategoryId2 = 5;
  int32 ItemCategoryId3 = 6;
  string FirstYear = 7;
  string FirstSeason = 8;
  string DevMonth = 9;
  string Developer = 10;
  string ItemCode = 11;
  string ItemCode2 = 12;
  string ColorCode = 13;
  string ItemName = 14;
  string ItemSpec = 15;
  int32 BuyerId = 16;
  int32 Buyer = 17;
  double Price = 18;
  double  DevPrice = 19;
  double ExclusiveTaxPrice = 20;
  double DevExclusiveTaxPrice = 21;
  double ExclusiveTaxPriceAgent = 22;
  double PriceAgent = 23;
   double   KGPrice = 24;
    string  Unit = 25;
    string  Component = 26;
     float LateralContraction = 27;
    float  DirectContraction = 28;
    float  ItemWidth = 29;
    float  Weight = 30;
     float KilogramMeter = 31;
   string   DaysSupply = 32;
    float  MOQ = 33;
     float UpperInventory = 34;
     float BelowInventory = 35;
     string SupplierItemCode = 36;
    string  SupplierItemColor = 37;
    string  Remark = 38;
     string PicturePath = 39;
    bool  HaveApproveDevPrice = 40;
     bool HaveApprovePrice = 41 ;
    string  Brand = 42;
     string DevType = 43;
    int32  SortCode = 44;
     bool Enabled = 45;
     bool Deleted = 46;
    int32  AccountID = 47;
     string CreatedOn = 48;
     string CreatedBy = 49;
     int32 CreatedCustomerId = 50;
     string ModifiedOn = 51;
    string  ModifiedBy = 52;
    int32  ModifiedCustomerId = 53;
    string  ApprovalPriceRemark = 54;
    int32  ExemptionState	    = 55;
     int32 OwnerId			    = 56;
}

message Product {
  int32 Id = 1;
  int32 ColorId=2;
  int32 GoodsId = 3;
  string ProductSN = 4;
  string PicturePath = 5;
  string Remark = 6;
  int32 AccountID = 7;
  bool Deleted = 8;
  int32 Enabled = 9;
  string CreatedOn = 10;
  string CreatedBy = 11;
  int32 CreatedCustomerId = 12;
  string ModifiedOn = 13;
  string ModifiedBy = 14;
  int32 ModifiedCustomerId = 15;
  int32 OwnerId = 16;
  Goods Goods = 17;
}

message Goods {
  int32 Id = 1;
  int32 DesignID = 2;
  string ProductCategory1 = 3;
  string ProductCategory2 = 4;
  string ProductCategory3 = 5;
  string Brand = 6;
  string ProductName = 7;
  int32 ProductYear = 8;
  string Season = 9;
  string ExecStandard = 10;
  string SafetyCass = 11;
  string Component = 12;
  double DevCost = 13;
  string ProductSN = 14;
  double FOBCost = 15;
  double ProcessingCost = 16;
  double ProductCost = 17;
  double InternalPrice = 18;
  double SalesPrice = 19;
  double TagPrice = 20;
  double BatchPrice = 21;
  double RADCost = 22;
  bool IsEmergency = 23;
  string ProductTitle = 24;
  string QualityGrade = 25;
  string Filler = 26;
  float FillFeatherPercent = 27;
  int32 WashingMethodPictureCode =  28;
  string FirstOnsaleShelveDate = 29;
  int32 SortCode = 30;
  int32 AccountID = 31;
  bool Deleted = 32;
  int32 Enabled = 33;
  string CreatedOn = 34;
  string CreatedBy = 35;
  int32 CreatedCustomerId = 36;
  string ModifiedOn = 37;
  string ModifiedBy = 38;
  int32 ModifiedCustomerId = 39;
  string Sex = 40;
  string WashingMethodPicture = 41;
  string CategoryClass = 42;
  bool IsUploadK3 = 43;
  string UploadK3Date = 44;
  int32 OwnerId = 45;
  Design Design = 46;
}

message Design
{
	int32 Id = 1;
	int32 DevYear = 2;
	string DesignGroup = 3;
	string DesignSeason = 4;
	string Theme = 5;
	string Collection = 6;
	string DesignAssistantName = 7;
	string DesignProductSN = 8;
	string ProductName = 9;
	string CommitProductNameDate = 10;
	string Material = 11;
	string Technology = 12;
	string Collar = 13;
	string Shape = 14;
	string ClothesLong = 15;
	string SleeveShape = 16;
	string SleeveLong = 17;
	string TypeDecomposition = 18;
	string Particulars = 19;
	string Aekbuh = 20;
	string SkirtLong= 21;
	string WaistShape = 22;
	string Element = 23;
	string TrousersShape = 24;
	string Outseam = 25;
	string Peplum = 26;
	string Commission = 27;
	string PicturePath = 28;
	string Status = 29;
	string Batch = 30;
	string UpnewDate= 31;
	string Remark = 32;
	int32 SortCode = 33;
	int32 AccountID = 34;
  bool Deleted = 35;
  int32 Enabled = 36;
  string CreatedOn = 37;
  string CreatedBy = 38;
  int32 CreatedCustomerId = 39;
  string ModifiedOn = 40;
  string ModifiedBy = 41;
  int32 ModifiedCustomerId = 42;
  int32 SizeCateId = 43;
  string IsMainPush = 44;
  string WaveSession = 45;
  string Gender = 46;
  string DesignCate = 47;
  int32 OwnerId = 48;
  string DesignSource = 49;
  string PriceRange = 50;
}


